# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=77.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['granary*']

[project.urls]
Homepage = 'https://granary.io/'
Documentation = 'https://granary.readthedocs.io/'

[project]
name = 'granary'
version = '11.0'
description = 'The social web translator'
readme = 'README.md'
authors = [
    { name='Ryan Barrett', email='granary@ryanb.org' },
]
license = 'CC0-1.0'
requires-python = '>=3.9'
keywords = ['social', 'facebook', 'flickr', 'github', 'instagram', 'twitter', 'activitystreams', 'html', 'microformats2', 'meetup', 'mf2', 'atom', 'rss', 'jsonfeed']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Environment :: Web Environment',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
    'blake3>=0.4.0',
    'beautifulsoup4>=4.8',
    'bech32>=1.2.0',
    'brevity>=0.2.17',
    'cachetools>=5.2.0',
    'cryptography>=41.0.0',
    'feedgen>=0.9',
    'feedparser>=6.0.0',
    'grpcio>=1.59.0',
    'html2text>=2019.8.11',
    'humanfriendly>=4.18',
    'jinja2>=3.0.0',
    'lexrpc>=2.2',
    'mf2util>=0.5.0',
    'multiformats>=0.3.1',
    'oauth-dropins>=8.0',
    'praw>=7.3.0',
    'prawcore>=2.1',
    'protobuf>=6.31.1',
    'pymediainfo>=6.0.0',
    'python-dateutil>=2.8.1',
    'pywebutil[google-cloud,html]>=2.0',
    'requests>=2.22',
    'requests-oauth2client>=1.8.0',
    'secp256k1>=0.14.0',
    'websockets>=11.0',
]

[project.optional-dependencies]
app = [
    'flask>=3.0.0',
    'flask-caching>=1.10.0',
    'flask-gae-static>=1.0',
    'google-cloud-ndb>=1.10.1',
    'gunicorn>=20.1.0',
    'ujson>=5.7.0',
    'werkzeug>=3.0.0',
]
tests = [
    'mf2py>=2.0',
]
docs = [
    'sphinx>=7.0.0',
    'sphinx-rtd-theme>=3.0.0',
]

# keep these sections in sync with requirements.txt
[tool.uv.sources]
arroba =            { editable = true, path = "../arroba" }
brevity =           { editable = true, path = "../brevity" }
flask-gae-static =  { editable = true, path = "../flask-gae-static" }
lexrpc =            { editable = true, path = "../lexrpc" }
mf2util =           { editable = true, path = "../mf2util" }
oauth-dropins =     { editable = true, path = "../oauth-dropins" }
pywebutil =         { editable = true, path = "../webutil" }
secp256k1 =         { editable = true, path = "../secp256k1-py" }

[tool.uv.pip]
# this is in ~/.config/uv/uv.toml

[tool.deptry]
extend_exclude = ['build', 'dist', 'docs', 'granary/generated']

[tool.deptry.per_rule_ignores]
# these deps aren't used in the codebase but we want to keep them in the local venv
DEP002 = [
    'gunicorn',
    'sphinx',
    'sphinx-rtd-theme',
    'ujson',
]
